Refactor: estructura limpia en la raiz del proyecto